# quantHub

./: $null  .gitignore  CLAUDE.md.docx  LICENSE  README.md  start.sh  temp_doc11_future.txt
1STRATEGY/: _wr.py  (+1 more)
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 4253bf6672b9_ticks_size_volume_numeric.py  7c7482e4e00a_core_signals_table.py  861eb5a06b23_order_execution_position_quantity_numeric.py  97e88a746f25_corporate_actions_idempotency_constraint.py  a2e4c7b1d6f9_executions_realized_pnl.py  a428732d6bfe_ticks_idempotency_constraint.py  a7d2e1f04b93_portfolios_configured_capital.py  b2e4c9d17a30_analytics_risk_limits_assessments.py  b4f8e21ac9d3_open_interest.py  c3a8f2b91e4d_initial_schema.py  c7d3f9a2e5b8_backtest_equity_curve_metrics.py  d1f8b6c4a7e2_orders_signal_id_lineage.py  d3f7a2c9b5e1_backtest_trade_result_benchmark.py  e7a3c1f5b9d2_perpetuals_instrument_type_margin_funding.py  f1c8a3e94d20_analytics_paper_trading_sessions.py  fcec1b5ac8a0_ohlcv_bars_volume_bigint_to_numeric.py
backend/scripts/: backfill_execution_realized_pnl.py  ingest_open_interest.py  ingest_top_liquidity.py  ingest_top_perpetuals.py  retrain_metalabeler.py  run_all_backtests.py
backend/src/quant_hub/: config.py  main.py
backend/src/quant_hub/api/: dependencies.py  envelope.py  middleware.py  ml.py
backend/src/quant_hub/api/v1/: backtests.py  execution.py  health.py  markets.py  portfolio.py  risk.py  router.py  strategies.py
backend/src/quant_hub/application/: __init__.py
backend/src/quant_hub/application/auth/: service.py
backend/src/quant_hub/application/backtesting/: engine.py  service.py
backend/src/quant_hub/application/execution/: order_generation_service.py  service.py
backend/src/quant_hub/application/feature_engineering/: service.py
backend/src/quant_hub/application/market_data/: corporate_actions_service.py  service.py
backend/src/quant_hub/application/monitoring/: service.py
backend/src/quant_hub/application/notifications/: __init__.py  service.py
backend/src/quant_hub/application/paper_trading/: graduation_service.py  runner.py  service.py
backend/src/quant_hub/application/portfolio/: construction_service.py  service.py  sizing_service.py
backend/src/quant_hub/application/reporting/: service.py
backend/src/quant_hub/application/research/: service.py
backend/src/quant_hub/application/risk/: service.py
backend/src/quant_hub/application/strategy_engine/: engine.py  service.py  signal_recording_service.py
backend/src/quant_hub/application/trading/: cycle.py
backend/src/quant_hub/domain/analytics/: entities.py  metrics_engine.py
backend/src/quant_hub/domain/auth/: interfaces.py
backend/src/quant_hub/domain/backtesting/: entities.py  interfaces.py  trade_rules.py
backend/src/quant_hub/domain/execution/: entities.py  interfaces.py  order_generation.py  simulation.py
backend/src/quant_hub/domain/feature_engineering/: interfaces.py
backend/src/quant_hub/domain/market_data/: calendar.py  connectors.py  correlation.py  entities.py  interfaces.py  quality.py  validation.py
backend/src/quant_hub/domain/ml/: entities.py  interfaces.py
backend/src/quant_hub/domain/monitoring/: interfaces.py
backend/src/quant_hub/domain/notifications/: interfaces.py
backend/src/quant_hub/domain/paper_trading/: graduation.py  interfaces.py
backend/src/quant_hub/domain/portfolio/: construction.py  entities.py  interfaces.py  positions.py  sizing.py
backend/src/quant_hub/hermes/: __init__.py  coordinator.py
backend/src/quant_hub/infrastructure/: cache.py  database.py  logging.py  risk_approval.py  risk_approval_adapter.py  risk_model.py  risk_model_stub.py
backend/src/quant_hub/ml/: feature_engineering.py  ml_engine.py  model_factory.py  training_data.py
backend/src/quant_hub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_endpoints.py  test_backtest_repository.py  test_corporate_actions_repository.py  test_execution_repository.py  test_funding_rate_repository.py  test_hermes_api.py  test_market_data_repositories.py  test_market_data_view_repositories.py  test_ml_api.py  test_open_interest_repository.py  test_portfolio_repository.py  test_risk_repository.py  test_signal_repository.py  test_strategy_repository.py
backend/tests/unit/: test_backtesting.py  test_calendar_service.py  test_corporate_actions_service.py  test_corporate_actions_validation.py  test_correlation.py  test_execution_loop.py  test_feature_engineering.py  test_funding_rate_basis.py  test_graduation.py  test_implied_sizing.py  test_ingestion_service_late_arrival.py  test_ingestion_service_quality.py  test_ingestion_service_validation.py  test_instrument_type_inference.py  test_market_data_view.py  test_metrics_engine.py  test_model_factory.py  test_moving_average_crossover.py  test_open_interest.py  test_order_generation.py  test_paper_trading_runner.py  test_plugin_registry.py  test_pnl_and_risk_metrics.py  test_portfolio_construction.py  test_position_sizing.py  test_pretrade_risk.py  test_quality.py  test_retry.py  test_signal_quality.py  test_signal_recording_service.py  test_signal_validation.py  test_strategy_contract.py  test_strategy_engine.py  test_trade_rules.py  test_validation.py
backend/tests/unit/hermes/: test_data_pipeline.py  test_import_boundary.py  test_ml_ops.py  test_service_health.py  test_strategy_lifecycle.py
(+317 files in other folders)
